small redesigning of the api
